--- a/Modelling_Battlefield_Attrition_w_Lanchester_Equations.ipynb
+++ b/Modelling_Battlefield_Attrition_w_Lanchester_Equations.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXqQv0Q69+ZffQloJzdeN3",
+      "authorship_tag": "ABX9TyMHHYxONNd+t0evnyWqiiqo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
       "cell_type": "code",
       "source": [
         "def pop(t, y): # population differential equations # gamma and beta\n",
-        "  alpha, beta = (-4/5), (-11/10)\n",
+        "  alpha, beta = (-4/5), (-11/10) # setting the attrition rates\n",
         "  armysize = np.array([alpha*y[1],beta*y[0]]) # X, Y\n",
         "  return armysize"
       ],
@@ -95,8 +95,8 @@
     {
       "cell_type": "code",
       "source": [
-        "t0, tf, h1 = 0, 0.5, 0.001\n",
-        "f0 = np.array((1000,500))\n",
+        "t0, tf, h1 = 0, 0.5, 0.001 # time event takes place over\n",
+        "f0 = np.array((1000,500)) # starting number of soldiers\n",
         "t1 = np.arange(t0,tf+h1,h1) # our time"
       ],
       "metadata": {
@@ -184,15 +184,6 @@
           "execution_count": 50
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "LyCeZp_F6x7X"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
